--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
     <body>
-        <h1>Hello World - Portfolio of Your Name</h1>
+        <h1>Hello World - Portfolio of Melissa Ecker</h1>
     </body>
 </html>
