--- a/index.html
+++ b/index.html
@@ -250,6 +250,13 @@ p.shift {
     <div id="Capstone" class="tabcontent">
         <h2>Capstone Project</h2>
     </div>
+
+    <!-- Begin Technical Assignments -->
+    <div id="Technical Assignments" class="tabcontent">
+        <h2><a href="javascript-calculator/index.html"=>JavaScript Calculator</a></h2>
+    </div>
+    
+    
 </div>
 
 <script>
