--- a/index.html
+++ b/index.html
@@ -176,6 +176,7 @@ p.shift {
                 <a class="tablinks" onclick="openTab(event, 'Programming')">Programming</a>
                 <a class="tablinks" onclick="openTab(event, 'SoftSkills')">Soft Skills</a>
                 <a class="tablinks" onclick="openTab(event, 'Capstone')">Capstone</a>
+                <a class="tablinks" onclick="openTab(event, 'TechnicalAssignments')">Technical Assignments</a>
             </div>
         </div> 
         <a href="javascript:void(0);" style="font-size:15px;" class="icon" onclick="myFunction()">&#9776;</a>
@@ -252,7 +253,7 @@ p.shift {
     </div>
 
     <!-- Begin Technical Assignments -->
-    <div id="Technical Assignments" class="tabcontent">
+    <div id="TechnicalAssignments" class="tabcontent">
         <h2><a href="javascript-calculator/index.html"=>JavaScript Calculator</a></h2>
     </div>
     
