add css and js files

--- a/javascript-calculator/index.html
+++ b/javascript-calculator/index.html
@@ -2,16 +2,16 @@
     <meta charset="UTF-8">
     <meta name="description" content="JavaScript Calculator">
     <meta name="keywords" content="JavaScript, HTML, CSS">
-    <meta name="author" content="Melissa Eckedr">
+    <meta name="author" content="Melissa Ecker">
     <title>JavaScript Calculator</title>
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
 <body>
 <form id="myform">
     <div class="formcontainer" onsubmit="return false">
-        <h1>Minimum, Maximum, and Average</h1>
+        <h1>JavaScript Calculator</h1>
         <fieldset id="detail">
-            <legend>Min Max Avg</legend>  
+            <legend>Calculator</legend>  
             <br>
             
             <label class="formlabel" for="Operand1">Operand 1: </label>
@@ -19,7 +19,7 @@
             <label class="error" for="Operand1" id="Operand1Error"></label>
             <br><br>
       
-            <label class="formlabel" for="Operand2">Operand 2: </label>
+            <label class="formlabel" for="Operand2">Operator: </label>
             <input type="text" id="Operand2" name="Operand2" size="15" maxlength="15">
             <label class="error" for="Operand2" id="Operand2Error"></label>
             <br><br>
@@ -52,6 +52,6 @@
         </fieldset>
     </div>
 </form>
-<script src="assets/scripts/minmaxavg.js"></script>
+<script src="assets/scripts/calculator.js"></script>
 
 <div id="hl-aria-live-message-container" aria-live="polite" class="visually-hidden"></div><div id="hl-aria-live-alert-container" role="alert" aria-live="assertive" class="visually-hidden"></div></body></html>
