--- a/javascript-calculator/index.html
+++ b/javascript-calculator/index.html
@@ -19,7 +19,7 @@
             <label class="error" for="Operand1" id="Operand1Error"></label>
             <br><br>
       
-            <label class="formlabel" for="Operand2">Operator: </label>
+            <label class="formlabel" for="Operand2">Operand 2: </label>
             <input type="text" id="Operand2" name="Operand2" size="15" maxlength="15">
             <label class="error" for="Operand2" id="Operand2Error"></label>
             <br><br>
