--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
     <meta name="keywords" content="E-Commerce, HTML, CSS, PHP ,JavaScript">
     <meta name="author" content="Melissa Ecker">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="assets/style/styleSheet.css">
+    <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&family=PT+Sans+Narrow:wght@400;700&family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Slabo+27px&display=swap" rel="stylesheet">
+
     <!-- See https://www.w3schools.com/howto/howto_js_responsive_navbar_dropdown.asp-->
 <style>
 body {margin:0;font-family:Arial}
@@ -156,7 +158,8 @@ p.shift {
 </head>
 <body>
 <div id="container">
-    <h1>Portfolio of Melissa Ecker</h1>
+      <h1>Portfolio of Melissa Ecker</h1>
+    <img src="assets/images/melissaEckerHeadshot3.JPG" alt="Melissa Ecker">
     <div class="topnav" id="myTopnav">
         <a class="tablinks" onclick="openTab(event, 'Home')" class="active" id="defaultOpen">Profile</a>
         <a class="tablinks" onclick="openTab(event, 'Resume')">Resume</a>
@@ -186,6 +189,7 @@ p.shift {
     <!-- Begin Home Section -->
     <div id="Home" class="tabcontent">
         <h2>Profile</h2>
+        <p>Aspiring software/database developer with twenty-plus years of legal experience. Embarking on a second career. Seeking to utilize my unique set of skills combining litigation, business, and technology to contribute to the success of your organization. Possess an A.S. in Computer Information Systems and certificates in Artificial Intelligence in Cybersecurity, Ethical Hacking, and Threat Hunting. Currently pursuing a Bachelor of Science in Information Science at University of Arkansas – Little Rock.</p>
     </div>
 
     <!-- Begin Skills Section -->
@@ -205,7 +209,7 @@ p.shift {
   
     <!-- Begin Skills Section -->
     <div id="Resume" class="tabcontent">
-        <h2>Resume</h2>
+        <h2>Resume<a href="melissaEckerResume.pdf" download></a></h2>
     </div>
     <!-- Begin Coverletter-->
     <div id="CoverLetter" class="tabcontent">
