--- a/javascript-calculator/index.html
+++ b/javascript-calculator/index.html
@@ -22,14 +22,17 @@
 
             <!-- Operator -->
             <label class="formlabel">Operator: </label>
-                <label for="MinOperator">
-                    <input type="radio" name="Operator" id="MinOperator" value="Min">Min
+                <label for="AddOperator">
+                    <input type="radio" name="Operator" id="AddOperator" value="+">+
                 </label>
-                <label for="MaxOperator">
-                    <input type="radio" name="Operator" id="MaxOperator" value="Max">Max
+                <label for="SubtractOperator">
+                    <input type="radio" name="Operator" id="SubtractOperator" value="-">-
                 </label>
-                <label for="AvgOperator">
-                    <input type="radio" name="Operator" id="AvgOperator" value="Avg">Avg
+                <label for="MultiplyOperator">
+                    <input type="radio" name="Operator" id="MultiplyOperator" value="*">*
+                </label>
+                <label for="DivideOperator">
+                    <input type="radio" name="Operator" id="DivideOperator" value="/">/
                 </label>
             <label for="Operator" class="error" id="OperatorError"></label>
             <br><br>
