set up currency value history project

--- a/index.html
+++ b/index.html
@@ -260,6 +260,7 @@ p.shift {
     <!-- Begin Technical Assignments -->
     <div id="TechnicalAssignments" class="tabcontent">
         <h2><a href="javascript-calculator/index.html"=>JavaScript Calculator</a></h2>
+        <h2><a href="currencyValueHistory/index.html"=>Currency Value History</a></h2>
     </div>
     
     
