add sophie's website to portfolio

--- a/index.html
+++ b/index.html
@@ -120,8 +120,6 @@ body {margin:0;font-family:Arial}
   }
 }
 
-
-
 body {
 	font-family: "Playfair Display", serif;
 	}
@@ -153,14 +151,11 @@ p.shift {
 	border: 1px solid #CCC;
 }	
 
-
-
 </style>
 </head>
 <body>
 <div id="container">
       <h1>Portfolio of Melissa Ecker</h1>
-    <img src="assets/images/melissaEckerHeadshot3.JPG" alt="Melissa Ecker">
     <div class="topnav" id="myTopnav">
         <a class="tablinks" onclick="openTab(event, 'Home')" class="active" id="defaultOpen">Profile</a>
         <a class="tablinks" onclick="openTab(event, 'Resume')">Resume</a>
@@ -190,8 +185,10 @@ p.shift {
     <!-- Begin Home Section -->
     <div id="Home" class="tabcontent">
         <h2>Profile</h2>
-        <p>Aspiring software/database developer with twenty-plus years of legal experience. Embarking on a second career. Seeking to utilize my unique set of skills combining litigation, business, and technology to contribute to the success of your organization. Possess an A.S. in Computer Information Systems and certificates in Artificial Intelligence in Cybersecurity, Ethical Hacking, and Threat Hunting. Currently pursuing a Bachelor of Science in Information Science at University of Arkansas – Little Rock.</p>
-    </div>
+        <div style="display: flex; align-items: center;">
+  <img src="assets/images/melissaEckerHeadshot3.JPG" alt="Melissa Ecker" style="width: 120px; margin-right: 10px;">
+        <p>Aspiring software/database developer with twenty-plus years of legal experience. Embarking on a second career. Seeking to utilize my unique set of skills combining litigation, business, and technology to contribute to the success of your organization. Possess an A.S. in Computer Information Systems and certificates in Artificial Intelligence in Cybersecurity, Ethical Hacking, and Threat Hunting. Currently pursuing a Bachelor of Science in Information Science at University of Arkansas – Little Rock. Graduating May 2026.</p>
+    </div> </div>
 
     <!-- Begin Skills Section -->
     <div id="Skills" class="tabcontent">
@@ -230,7 +227,7 @@ p.shift {
 
     <!-- Begin Web Examples -->
     <div id="WebProject" class="tabcontent">
-        <h2>Web Project 1</h2>
+        <h2><a href="sophie/index.html"=>Sophie's Website</a></h2>
         <h2>Web Project 2</h2>
     </div>
 
