work on website

--- a/sophie/carousel.html
+++ b/sophie/carousel.html
@@ -63,31 +63,31 @@
         <div id="carouselExample" class="carousel slide">
           <div class="carousel-inner">
             <div class="carousel-item active">
-              <img src="images/sophiePic1.JPG" class="d-block w-100" alt="Sophie Puppy">
+              <img src="assets/images/sophiePic1.JPG" class="d-block w-100" alt="Sophie Puppy">
             </div>
              <div class="carousel-item">
-              <img src="images/sophiePic5.JPG" class="d-block w-100" alt="Sophie Puppy Sleeping 2">
+              <img src="assets/images/sophiePic5.JPG" class="d-block w-100" alt="Sophie Puppy Sleeping 2">
             </div>
             <div class="carousel-item">
-              <img src="images/sophieHappy400.PNG" class="d-block w-100" alt="Sophie Happy">
+              <img src="assets/images/sophieHappy400.PNG" class="d-block w-100" alt="Sophie Happy">
             </div>
             <div class="carousel-item">
-              <img src="images/sophieLove400.JPG" class="d-block w-100" alt="Sophie Love">
+              <img src="assets/images/sophieLove400.JPG" class="d-block w-100" alt="Sophie Love">
             </div>
             <div class="carousel-item">
-              <img src="images/sophiePose400.JPG" class="d-block w-100" alt="Sophie Posing">
+              <img src="assets/images/sophiePose400.JPG" class="d-block w-100" alt="Sophie Posing">
             </div>
             <div class="carousel-item">
-              <img src="images/sophiePic4.JPG" class="d-block w-100" alt="Sophie Outside">
+              <img src="assets/images/sophiePic4.JPG" class="d-block w-100" alt="Sophie Outside">
             </div>
            <div class="carousel-item">
-              <img src="images/sophieRelaxed400.jpg" class="d-block w-100" alt="Sophie Relaxing">
+              <img src="assets/images/sophieRelaxed400.jpg" class="d-block w-100" alt="Sophie Relaxing">
             </div>
             <div class="carousel-item">
-              <img src="images/sophieSmile400.JPG" class="d-block w-100" alt="Sophie Smiling">
+              <img src="assets/images/sophieSmile400.JPG" class="d-block w-100" alt="Sophie Smiling">
             </div>
             <div class="carousel-item">
-              <img src="images/sophiePic6.jpg" class="d-block w-100" alt="Sophie Christmas Elf">
+              <img src="assets/images/sophiePic6.jpg" class="d-block w-100" alt="Sophie Christmas Elf">
             </div>
           </div>
           <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
