--- a/sophie/sophiesStory.html
+++ b/sophie/sophiesStory.html
@@ -61,9 +61,9 @@
         <p>Let’s quickly go over what it means to be a “double merle” or homozygous merle, and what the consequences are. In simple terms, breeding “spot to spot” is not sound breeding. If you’ve ever seen a Great Dane that looks like a Dalmatian, that’s a Harlequin Great Dane. If you breed two of these dogs together, the puppies are at risk of inheriting two copies of the merle gene. One copy of this gene causes a marbling effect, for example, white with black spots. Inheriting two copies of this gene doubles the lightening effect and ends up “bleaching” the dog and making it predominantly white. So, why is that a problem, you might ask?</p>
             <!--Responsive Images-->
         <img src="assets/images/SophieWhy400.png" alt="Sophie Why is this a Problem?"
-          srcset="images/SophieWhy1000.png 1000w,
-            images/SophieWhy600.png 600w,
-            images/SophieWhy400.png 400w"
+          srcset="assets/images/SophieWhy1000.png 1000w,
+            assets/images/SophieWhy600.png 600w,
+            assets/images/SophieWhy400.png 400w"
             sizes="(min-width:1000px) 30vw, 400px;">    
 
         <p>When a dog is lacking pigmentation, particularly in their ears, the little hairs and nerve endings die and fall off early in their life leaving them deaf. Dogs are smart and incredibly adaptable though. They can learn hand signals for communication. A deaf dog can’t hear traffic or other dogs growling, so extra safeguards are necessary.</p>
@@ -82,10 +82,10 @@
         <p>I’m always eager to share Sophie’s story and how she enriched my life and how I hope I enriched hers. Welcoming a dog with special needs into your home isn’t for everyone, but if you feel like you could give a good life to a dog like her, make sure you’re educated first. Armed with information and the correct resources, you can both live your best lives together.</p>
 
         <!--Responsive Images-->
-      <img src="images/adoptDontShop400.png" alt="Sophie Adopt Don't Shop"
-        srcset="images/adoptDontShop1000.png 1000w,
-            images/adoptDontShop600.png 600w,
-            images/adoptDontShop400.png 400w"
+      <img src="assets/images/adoptDontShop400.png" alt="Sophie Adopt Don't Shop"
+        srcset="assets/images/adoptDontShop1000.png 1000w,
+            assets/images/adoptDontShop600.png 600w,
+            assets/images/adoptDontShop400.png 400w"
             sizes="(min-width:1000px) 30vw, 400px;">    
       <p></p>
       </section>
