--- a/sophie/carousel.html
+++ b/sophie/carousel.html
@@ -37,7 +37,7 @@
               <ul class="dropdown-menu">
                 <li><a class="dropdown-item" href="https://cabotanimalsupportservices.com/program/volunteer/">Volunteering</a></li>
                 <li><a class="dropdown-item" href="https://www.whitekissesgreatdanerescue.com/double-merle-awareness">What is a double merle?</a></li>
-                <li><a class="dropdown-item" href="https://www.arkansasanimalrescuefoundation.org/animal-welfare">Resources</a></li>
+                <li><a class="dropdown-item" href="https://www.petmd.com/dog/care/evr_multi_10_things_consider_before_pet_adoption">Resources</a></li>
                 <li><a class="dropdown-item" href="https://www.instagram.com/sophiethegreatdeafdane/?hl=en">Sophie's Instagram</a></li>
               </ul>
             </li>
@@ -51,7 +51,7 @@
         <p class="lead">Advocating for Dogs with Disabilities</p>
         <hr class="my-4">
         <p>What can you do to help? Spay and Neuter Your Pets!</p>
-        <a class="btn btn-danger btn-lg" href="https://www.arkansasanimalrescuefoundation.org/spay-neuter" role="button">Learn more</a>
+        <a class="btn btn-danger btn-lg" href="https://www.careforanimals.org/spay-neuter-assistance" role="button">Learn more</a>
       </div>
     </div>
     
