HTML/CSS technical assignment

--- a/currencyValueHistory/index.html
+++ b/currencyValueHistory/index.html
@@ -1,9 +1,9 @@
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en"><head>
     <meta charset="UTF-8">
-    <meta name="description" content="JavaScript Calculator">
+    <meta name="description" content="Currency Value History">
     <meta name="keywords" content="JavaScript, HTML, CSS">
     <meta name="author" content="Melissa Ecker">
-    <title>JavaScript Calculator</title>
+    <title>Currency Value History</title>
     <link rel="stylesheet" type="text/css" href="assets/css/stylesheet.css">
 </head>
 <body>
@@ -22,3 +22,4 @@
 </div>
 </body>
 </html>
+
