--- a/index.html
+++ b/index.html
@@ -207,7 +207,9 @@ p.shift {
   
     <!-- Begin Skills Section -->
     <div id="Resume" class="tabcontent">
-        <h2>Resume<a href="melissaEckerResume.pdf" download></a></h2>
+        <h2>Resume</h2>
+        <h2><a href="melissaEckerResume.pdf" download>Download pdf</a></h2>
+
     </div>
     <!-- Begin Coverletter-->
     <div id="CoverLetter" class="tabcontent">
@@ -256,7 +258,8 @@ p.shift {
 
     <!-- Begin Technical Assignments -->
     <div id="TechnicalAssignments" class="tabcontent">
-        <h2><a href="javascript-calculator/index.html"=>JavaScript Calculator</a></h2>
+        <h2><a href="web-1/index.html"=>HTML/CSS Review</a></h2>
+        <h2><a href="javascriptCalculator/index.html"=>JavaScript Calculator</a></h2>
         <h2><a href="currencyValueHistory/index.html"=>Currency Value History</a></h2>
     </div>
     
