style for HTML/CSS

--- a/web-1/index.html
+++ b/web-1/index.html
@@ -16,12 +16,11 @@
     <ul>
       <li><a href="http://ualr.edu" title="UA Little Rock">UALR</a></li>
       <li><a href="">Course Homepage</a></li>
-      <li><a href="http://www.w3.org/">W3C</a></li>
-      <li><a href="">Little Rock</a></li>
+      <li><a href="http://www.w3schools.com/">W3C</a></li>
+      <li><a href="https://www.littlerock.gov/">Little Rock</a></li>
     </ul>
   </div>
   <div id="content">
-   
     <h2>My Assessment</h2>
     <p>
       <img alt="Globe with maps" src="assets/images/webpage-image.jpg" /> The most important goal of effective communication is clarity. Clarity is not the same as simplicity . Often, simple things are clear if the message is intended to be brief and small, but often the message is about a complex relationship that can only be presented with a necessarily large amount of data. </p>
