--- a/web-1/index.html
+++ b/web-1/index.html
@@ -15,8 +15,8 @@
   <div id="nav">
     <ul>
       <li><a href="http://ualr.edu" title="UA Little Rock">UALR</a></li>
-      <li><a href="">Course Homepage</a></li>
-      <li><a href="http://www.w3schools.com/">W3C</a></li>
+      <li><a href="https://blackboard.ualr.edu/ultra/courses/_278510_1/outline">Course Homepage</a></li>
+      <li><a href="https://www.w3.org/">W3C</a></li>
       <li><a href="https://www.littlerock.gov/">Little Rock</a></li>
     </ul>
   </div>
@@ -24,7 +24,7 @@
     <h2>My Assessment</h2>
     <p>
       <img alt="Globe with maps" src="assets/images/webpage-image.jpg" /> The most important goal of effective communication is clarity. Clarity is not the same as simplicity . Often, simple things are clear if the message is intended to be brief and small, but often the message is about a complex relationship that can only be presented with a necessarily large amount of data. </p>
-    <p> This complexity can be made to appear clear by effective organization and presentation and need not be reduced to meaningless "bite-sized" chunks of data, as simplification usually does. </p>
+    <p class="alert"> This complexity can be made to appear clear by effective organization and presentation and need not be reduced to meaningless "bite-sized" chunks of data, as simplification usually does. </p>
     <p>Clarity refers to the focus on one particular message or goal at a time, rather than attempting to accomplish too much at once. Simplicity is often responsible for the "dumbing" of information rather than the illumination of it.</p>
     <h3>Questions</h3>
     <p>Please answer the following questions below. Remember to markup the information properly using HTML</p>
