--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@ p.shift {
     <div id="TechnicalAssignments" class="tabcontent">
         <h2><a href="web-1/index.html"=>HTML/CSS Review</a></h2>
         <h2><a href="javascriptCalculator/index.html"=>JavaScript Calculator</a></h2>
-        <!--<h2><a href="currencyValueHistory/index.html"=>Currency Value History</a></h2>-->
+        <h2><a href="currencyValueHistory/index.html"=>Currency Value History</a></h2>
     </div>
     
     
