--- a/currencyValueHistory/index.html
+++ b/currencyValueHistory/index.html
@@ -16,7 +16,7 @@
             <!-- Create base currency selector -->
             <label for="BaseCurrency" class="formlabel" >Base Currency: </label>
             <select id="basecurrency" name="basecurrency" data-rule-required="true" data-msg-required="Base Currency is Required" required>
-                <option value="">Select An Option</option>
+                <option value="">Select a Currency</option>
                 <option value="USD">United States Dollar</option>
                 <option value="DKK">Danish Krone</option>
                 <option value="AUD">Australian Dollar</option>
@@ -29,7 +29,7 @@
             <!-- Create convert to currency selector -->
             <label for="ConvertTo Currency" class="formlabel" >Convert to Currency: </label>
             <select id="converttocurrency" name="converttocurrency" data-rule-required="true" data-msg-required="Convert to Currency is Required" required>
-                <option value="">Select An Option</option>
+                <option value="">Select a Currency</option>
                 <option value="USD">United States Dollar</option>
                 <option value="DKK">Danish Krone</option>
                 <option value="AUD">Australian Dollar</option>
