work on portfolio

--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
     <meta name="author" content="Melissa Ecker">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="assets/style/styleSheet.css"
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&family=PT+Sans+Narrow:wght@400;700&family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Slabo+27px&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&family=PT+Sans+Narrow:wght@400;700&family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Slabo+27px&display=swap" rel="stylesheet">
 
     <!-- See https://www.w3schools.com/howto/howto_js_responsive_navbar_dropdown.asp-->
 <style>
@@ -33,7 +33,7 @@ body {margin:0;font-family:Arial}
 }
 
 .active {
-  background-color: rgb(43, 193, 243);
+  background-color: rgb(35, 162, 204);
   color: white;
 }
 
@@ -155,7 +155,9 @@ p.shift {
 </head>
 <body>
 <div id="container">
+  <div id="header">
       <h1>Portfolio of Melissa Ecker</h1>
+      </div>
     <div class="topnav" id="myTopnav">
         <a class="tablinks" onclick="openTab(event, 'Home')" class="active" id="defaultOpen">Profile</a>
         <a class="tablinks" onclick="openTab(event, 'Resume')">Resume</a>
