--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ body {margin:0;font-family:Arial}
 }
 
 .active {
-  background-color: rgb(35, 162, 204);
+  
   color: white;
 }
 
@@ -76,7 +76,7 @@ body {margin:0;font-family:Arial}
 }
 
 .topnav a:hover, .dropdown:hover .dropbtn {
-  background-color: #555;
+  background-color: lightslategray;
   color: white;
 }
 
