--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
     <div id="Home" class="tabcontent">
         <h2>Profile</h2>
         <div style="display: flex; align-items: center;">
-  <img src="assets/images/melissaEckerHeadshot3.JPG" alt="Melissa Ecker" style="width: 120px; margin-right: 10px;">
-        <p>Aspiring software/database developer with twenty-plus years of legal experience. Embarking on a second career. Seeking to utilize my unique set of skills combining litigation, business, and technology to contribute to the success of your organization. Elevator Pitch.</p>
+  <p><img class="img-style-1" src="assets/images/melissaEckerHeadshot3.JPG" alt="Melissa Ecker" style="width: 120px; margin-right: 10px;">
+        Aspiring software/database developer with twenty-plus years of legal experience. Embarking on a second career. Seeking to utilize my unique set of skills combining litigation, business, and technology to contribute to the success of your organization. Elevator Pitch.</p>
     </div> </div>
 
     <!-- Begin Skills Section -->
@@ -77,6 +77,24 @@
     <!-- Begin Coverletter-->
     <div id="CoverLetter" class="tabcontent">
         <h2>Letter of Introduction</h2>
+        <p>Dear Sir/Madam,</p>
+        <p>I am seeking a position within your company. At your convenience, I'd appreciate the opportunity to discuss opportunities and my candidacy with you. You can find my resume attached.</p>
+        <p>I have 20+ years experience in the legal industry and am embarking on a second career in the technology arena. Experience has taught me that an effective team member of any business should be creative, resourceful, and capable of multitasking with accuracy and organization.</p>
+      
+        <ul>
+            <li class="listmargin">List specific experience</li>
+            
+            <li class="listmargin">list technology skills.</li>
+            <li class="listmargin">I have completed an A.S. in Computer Information Systems and am currently pursuing a B.S. in Information Science graduating in May 2026. I am knowledgable in programming languages including Java, Python, C++, HTML, CSS, JavaScript, SQL, and PL/SQL. I have experience utilizing IEDs such as Eclipse, Visual Studio, and GitHub. Additionally, I am familiar with Linux (Ubuntu), Oracle, and relational database management systems.</li>
+        </ul>
+        <p>I believe that the combination of my experience and current educational accomplishments makes me a good candidate to help your organization meet their goals. I would appreciate the opportunity to discuss with you my qualifications and your company's needs. Feel free to contact me anytime at (562) 895-1981.  I will be available at your convenience.</p>
+        <p>Thank you for your consideration,</p> 
+        <p>Melissa Ecker<br>
+          1201 Linda Lane<br>
+          Cabot, Arkansas 72023<br>
+          (562) 895-1981<br>
+          melissaeckerpc@gmail.com<br>
+        </p>
     </div>
 
     <!--Begin Contact-->
