--- a/currencyValueHistory/index.html
+++ b/currencyValueHistory/index.html
@@ -14,7 +14,7 @@
             <br>
 
             <!-- Create base currency selector -->
-            <label for="BaseCurrency" class="formlabel" >Base Currency: </label>
+            <label for="BaseCurrency" class="formlabel">Base Currency: </label>
             <select id="basecurrency" name="basecurrency" data-rule-required="true" data-msg-required="Base Currency is Required" required>
                 <option value="">Select a Currency</option>
                 <option value="USD">United States Dollar</option>
@@ -24,10 +24,11 @@
                 <option value="CAD">Canadian Dollar</option>
                 <option value="JPY">Japanese Yen</option>
             </select>
+            <label class="error" for="BaseCurrency" id="BaseCurrencyError"></label>
             <br>
 
             <!-- Create convert to currency selector -->
-            <label for="ConvertTo Currency" class="formlabel" >Convert to Currency: </label>
+            <label for="ConvertToCurrency" class="formlabel">Convert to Currency: </label>
             <select id="converttocurrency" name="converttocurrency" data-rule-required="true" data-msg-required="Convert to Currency is Required" required>
                 <option value="">Select a Currency</option>
                 <option value="USD">United States Dollar</option>
@@ -37,33 +38,28 @@
                 <option value="CAD">Canadian Dollar</option>
                 <option value="JPY">Japanese Yen</option>
             </select>
+            <label class="error" for="ConvertToCurrency" id="ConvertToCurrencyError"></label>
             <br>
 
             <!-- Create from date and to date dropdowns -->
             <label for="fromdate" class="formlabel">From Date: </label>
             <input type="date" id="fromdate" name="fromdate" required>
+            <label class="error" for="FromDate" id="FromDateError"></label>
             <br>
             <label for="todate" class="formlabel">To Date: </label>
             <input type="date" id="todate" name="todate" required>
+            <label class="error" for="ToDate" id="ToDateError"></label>
             <br><br>
 
             <!-- Show Results and Clear Buttons -->        
-            <input type="button" value="Show Results" name="ShowResults" id="display">
+            <input type="button" value="Show Results" name="ShowResults" onclick="ShowResults();">
             <input type="button" value="Clear" name="Clear" onclick="clearform();">
             <hr>
-
-            <!-- Create Chart --> 
-            <div class="clearfix">
-                <div class="chart-container">
-                    <span id="ConversionHistoryChart"></span>
-                </div>
-            </div>
             </fieldset>
             
-            <div class="clearfix">
-                <div class="chart-container">
-                    <canvas id="chartjs-0"></canvas>
-                </div>
+            <!-- Create Chart --> 
+            <canvas id="chartjs-0"></canvas>
+            </div>
             </div>
         </div>
     </form>
