--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
         <a class="tablinks" onclick="openTab(event, 'Accomplishments')">Accomplishments</a>
         <a class="tablinks" onclick="openTab(event, 'CoverLetter')">Cover Letter</a>
         <a class="tablinks" onclick="openTab(event, 'Contact')">Contact</a>
+        
         <div class="dropdown">
             <button class="dropbtn">Work Examples 
                 <i class="fa fa-caret-down"></i>
@@ -194,7 +195,7 @@
               software packaging, and software management.</p>
 
         <strong>IFSC 4330 - Database Security</strong>
-        <p class="shift"> Focus on security issues in databases systems and introduction of how current and future commercial systems may be designed to ensure secrecy and confidentiality. Topics include security models, basic security mechanisms and software, statistical database security, intrusion detection, security models for next generation databases, tested techniques and proven strategies for securing an Oracle environment — from the operating system to the database to the network, and how to implement security using Oracle’s built-in tools.</p>
+        <p class="shift"> Focus on security issues in databases systems and introduction of how current and future commercial systems may be designed to ensure secrecy and     confidentiality. Topics include security models, basic security mechanisms and software, statistical database security, intrusion detection, security models for next generation databases, tested techniques and proven strategies for securing an Oracle environment — from the operating system to the database to the network, and how to implement security using Oracle’s built-in tools.</p>
 
         <strong>IFSC 4396/4398 - Capstone Project I/II</strong>
         <p class="shift">Capstone course in which students do an analysis and design
@@ -235,8 +236,7 @@
         <p>I believe that the combination of my experience and current educational accomplishments makes me a good candidate to help your organization meet their goals. I would appreciate the opportunity to discuss with you my qualifications and your company's needs. Feel free to contact me anytime at (562) 895-1981.  I will be available at your convenience.</p>
         <p>Thank you for your consideration,</p> 
         <p>Melissa Ecker<br>
-          1201 Linda Lane<br>
-          Cabot, Arkansas 72023<br>
+           Cabot, Arkansas 72023<br>
           (562) 895-1981<br>
           melissaeckerpc@gmail.com<br>
         </p>
@@ -248,11 +248,10 @@
        <ul>
           <li>Phone: (562) 895-1981</li>
           <li>Email: <a href="mailto:melissaeckerpc@gmail.com">melissaeckerpc@gmail.com</a></li>
-          <li>Address: 1201 Linda Lane, Cabot, AR  72023</li>
+          <li>Address: Cabot, AR  72023</li>
           <li>LindedIn: <a href="https://www.linkedin.com/in/melissa-ecker1/">Melissa Ecker</a></li>
       </ul>
   </div>
-    </div>
 
     <!-- Begin Writing Examples-->
     <div id="Writing" class="tabcontent">
@@ -303,7 +302,9 @@
     <!-- Begin Programming Examples -->
     <div id="Programming" class="tabcontent">
         <h2>Programming Project 1</h2>
+        <h2><a href="javascriptCalculator/index.html"=>JavaScript Calculator</a></h2>
         <h2>Programming Project 2</h2>
+        <h2><a href="currencyValueHistory/index.html"=>Currency Value History</a></h2>
     </div>
 
     <!-- Begin Soft Skills -->
@@ -322,6 +323,7 @@
         <h2><a href="web-1/index.html"=>HTML/CSS Review</a></h2>
         <h2><a href="javascriptCalculator/index.html"=>JavaScript Calculator</a></h2>
         <h2><a href="currencyValueHistory/index.html"=>Currency Value History</a></h2>
+        
     </div>
 </div>
 <script src="assets/scripts/script.js"></script>
