--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
           <li>Phone: (562) 895-1981</li>
           <li>Email: <a href="mailto:melissaeckerpc@gmail.com">melissaeckerpc@gmail.com</a></li>
           <li>Address: Cabot, AR  72023</li>
-          <li>LindedIn: <a href="https://www.linkedin.com/in/melissa-ecker1/">Melissa Ecker</a></li>
+          <li>LinkedIn: <a href="https://www.linkedin.com/in/melissa-ecker1/">Melissa Ecker</a></li>
       </ul>
   </div>
 
@@ -273,7 +273,7 @@
         <p> In my upper division Mobile Web Development course, our final project required that we develop a mobile-first style website. There was a heavy focus on progressive enhancement versus graceful degradation and appropriate breakpoints for mobile, tablet, and desktop applications. This website was developed utilizing tools such as Figma and BootStrap and skills including HTML5 and CSS.</p>
         <a href="sophie/index.html"=>Sophie's Website</a>
         <h2>Web Project 2</h2>
-        
+
     </div>
 
     <!-- Begin Database Examples -->
