--- a/index.html
+++ b/index.html
@@ -274,6 +274,7 @@
         <a href="sophie/index.html"=>Sophie's Website</a>
         <h2>Web Project 2</h2>
 
+        <a href="spaceX/index.html"=>SpaceX Website</a>
     </div>
 
     <!-- Begin Database Examples -->
