add web project 2 paragraph

--- a/index.html
+++ b/index.html
@@ -272,8 +272,9 @@
         <h2>Web Project 1</h2>
         <p> In my upper division Mobile Web Development course, our final project required that we develop a mobile-first style website. There was a heavy focus on progressive enhancement versus graceful degradation and appropriate breakpoints for mobile, tablet, and desktop applications. This website was developed utilizing tools such as Figma and BootStrap and skills including HTML5 and CSS.</p>
         <a href="sophie/index.html"=>Sophie's Website</a>
+        
         <h2>Web Project 2</h2>
-
+        <p>Web Technologies was the course that introduced me to HTML5 and CSS. The final project for this course was to build a simple website for SpaceX. I enjoyed learning how to write HTML5 and then applying CSS to make it all come together.</p>
         <a href="spaceX/index.html"=>SpaceX Website</a>
     </div>
 
