--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
               communication, scheduling, virtual memory, device management, input/output, secondary storage and
               file management, and protection.</p>
               
-        <strong>IFSC 2340 - Human Computer Interface (java)</strong>
+        <strong>IFSC 2340 - Human Computer Interface (Java)</strong>
         <p class="shift">In-depth study of building user interfaces; user
               requirements, design, aesthetics, and programming.</p>
 
@@ -287,9 +287,9 @@
     <!-- Begin Programming Examples -->
     <div id="Programming" class="tabcontent">
         <h2>Programming Project 1</h2>
-        <h2><a href="javascriptCalculator/index.html"=>JavaScript Calculator</a></h2>
+        <a href="javascriptCalculator/index.html"=>JavaScript Calculator</a>
         <h2>Programming Project 2</h2>
-        <h2><a href="currencyValueHistory/index.html"=>Currency Value History</a></h2>
+        <a href="currencyValueHistory/index.html"=>Currency Value History</a>
     </div>
 
     <!-- Begin Soft Skills -->
